renaming block file to main, and adding blockchain class with a default genesis block

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="lib/jasmine-3.2.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/block.js"></script>
+  <script src="src/Block.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/blockSpec.js"></script>
+  <script src="spec/BlockSpec.js"></script>
 
 </head>
 
